{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 51,
  "lineage": "3436aacc-16ae-0fce-67f3-5f1c21561411",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d237e7ed52d91b6",
            "arn": "arn:aws:ec2:us-east-1:002780590596:elastic-ip/eipalloc-00d237e7ed52d91b6",
            "association_id": "eipassoc-08b20818e52225094",
            "domain": "vpc",
            "id": "eipalloc-00d237e7ed52d91b6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05d4586aca566b820",
            "private_dns": "ip-10-0-1-30.ec2.internal",
            "private_ip": "10.0.1.30",
            "public_dns": "ec2-100-52-82-241.compute-1.amazonaws.com",
            "public_ip": "100.52.82.241",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ai-chatbot-nat-eip-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ai-chatbot-nat-eip-1",
              "Project": "AI-Chatbot"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01842293720a2abc3",
            "arn": "arn:aws:ec2:us-east-1:002780590596:elastic-ip/eipalloc-01842293720a2abc3",
            "association_id": "eipassoc-066e9cce5f72e025e",
            "domain": "vpc",
            "id": "eipalloc-01842293720a2abc3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a79848ee5e308d88",
            "private_dns": "ip-10-0-2-64.ec2.internal",
            "private_ip": "10.0.2.64",
            "public_dns": "ec2-54-164-191-172.compute-1.amazonaws.com",
            "public_ip": "54.164.191.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ai-chatbot-nat-eip-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ai-chatbot-nat-eip-2",
              "Project": "AI-Chatbot"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:002780590596:internet-gateway/igw-0dbebd7617151c49b",
            "id": "igw-0dbebd7617151c49b",
            "owner_id": "002780590596",
            "tags": {
              "Name": "ai-chatbot-igw"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ai-chatbot-igw",
              "Project": "AI-Chatbot"
            },
            "vpc_id": "vpc-0a350b869d265a371"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d237e7ed52d91b6",
            "association_id": "eipassoc-08b20818e52225094",
            "connectivity_type": "public",
            "id": "nat-039d6260e8ee42ac6",
            "network_interface_id": "eni-05d4586aca566b820",
            "private_ip": "10.0.1.30",
            "public_ip": "100.52.82.241",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-066482637bee78936",
            "tags": {
              "Name": "ai-chatbot-nat-gw-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ai-chatbot-nat-gw-1",
              "Project": "AI-Chatbot"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01842293720a2abc3",
            "association_id": "eipassoc-066e9cce5f72e025e",
            "connectivity_type": "public",
            "id": "nat-0b9e20958ca85bf53",
            "network_interface_id": "eni-0a79848ee5e308d88",
            "private_ip": "10.0.2.64",
            "public_ip": "54.164.191.172",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0379bdd76f3992ba6",
            "tags": {
              "Name": "ai-chatbot-nat-gw-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ai-chatbot-nat-gw-2",
              "Project": "AI-Chatbot"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_2",
            "aws_internet_gateway.main",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:002780590596:route-table/rtb-0f9606b962f45a5ef",
            "id": "rtb-0f9606b962f45a5ef",
            "owner_id": "002780590596",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-039d6260e8ee42ac6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ai-chatbot-private-rt-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ai-chatbot-private-rt-1",
              "Project": "AI-Chatbot"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a350b869d265a371"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_1",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:002780590596:route-table/rtb-0bcf66638cc9b18e8",
            "id": "rtb-0bcf66638cc9b18e8",
            "owner_id": "002780590596",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b9e20958ca85bf53",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ai-chatbot-private-rt-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ai-chatbot-private-rt-2",
              "Project": "AI-Chatbot"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a350b869d265a371"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_2",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_2",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:002780590596:route-table/rtb-096e09337eb1ad242",
            "id": "rtb-096e09337eb1ad242",
            "owner_id": "002780590596",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dbebd7617151c49b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ai-chatbot-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ai-chatbot-public-rt",
              "Project": "AI-Chatbot"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a350b869d265a371"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f58a590505bdebc",
            "route_table_id": "rtb-0f9606b962f45a5ef",
            "subnet_id": "subnet-0892516486dd42563"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_1",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_1",
            "aws_route_table.private_1",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01dfc8a301d9e76ed",
            "route_table_id": "rtb-0bcf66638cc9b18e8",
            "subnet_id": "subnet-01a4349fcdfac40cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_2",
            "aws_internet_gateway.main",
            "aws_nat_gateway.nat_2",
            "aws_route_table.private_2",
            "aws_subnet.private_2",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ff3f03148d3650d",
            "route_table_id": "rtb-096e09337eb1ad242",
            "subnet_id": "subnet-066482637bee78936"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034ad9a3e9c590a14",
            "route_table_id": "rtb-096e09337eb1ad242",
            "subnet_id": "subnet-0379bdd76f3992ba6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:002780590596:security-group/sg-07e6bf271f179d515",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e6bf271f179d515",
            "ingress": [],
            "name": "ai-chatbot-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "002780590596",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ai-chatbot-eks-cluster-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ai-chatbot-eks-cluster-sg",
              "Project": "AI-Chatbot"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a350b869d265a371"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:002780590596:security-group/sg-0ba47d49d75d4b75b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba47d49d75d4b75b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07e6bf271f179d515"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "ai-chatbot-eks-nodes-sg",
            "name_prefix": "",
            "owner_id": "002780590596",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ai-chatbot-eks-nodes-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ai-chatbot-eks-nodes-sg",
              "Project": "AI-Chatbot"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a350b869d265a371"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:002780590596:security-group/sg-0ab97583d4a36f0f6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab97583d4a36f0f6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ba47d49d75d4b75b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "ai-chatbot-rds-sg",
            "name_prefix": "",
            "owner_id": "002780590596",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ai-chatbot-rds-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ai-chatbot-rds-sg",
              "Project": "AI-Chatbot"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a350b869d265a371"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:002780590596:subnet/subnet-0892516486dd42563",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0892516486dd42563",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "002780590596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ai-chatbot-private-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ai-chatbot-private-subnet-1",
              "Project": "AI-Chatbot"
            },
            "vpc_id": "vpc-0a350b869d265a371"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:002780590596:subnet/subnet-01a4349fcdfac40cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a4349fcdfac40cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "002780590596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ai-chatbot-private-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ai-chatbot-private-subnet-2",
              "Project": "AI-Chatbot"
            },
            "vpc_id": "vpc-0a350b869d265a371"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:002780590596:subnet/subnet-066482637bee78936",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066482637bee78936",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "002780590596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ai-chatbot-public-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ai-chatbot-public-subnet-1",
              "Project": "AI-Chatbot"
            },
            "vpc_id": "vpc-0a350b869d265a371"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:002780590596:subnet/subnet-0379bdd76f3992ba6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0379bdd76f3992ba6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "002780590596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ai-chatbot-public-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ai-chatbot-public-subnet-2",
              "Project": "AI-Chatbot"
            },
            "vpc_id": "vpc-0a350b869d265a371"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:002780590596:vpc/vpc-0a350b869d265a371",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09dddef41a69ab1c2",
            "default_route_table_id": "rtb-0ff67b4ce8d60dbb8",
            "default_security_group_id": "sg-0eb6ecd1f2989b94a",
            "dhcp_options_id": "dopt-0d762c89c7c94d577",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a350b869d265a371",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ff67b4ce8d60dbb8",
            "owner_id": "002780590596",
            "tags": {
              "Name": "ai-chatbot-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ai-chatbot-vpc",
              "Project": "AI-Chatbot"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}